test/error/LexLiteralDecTrailingLetters.fu
public static class Test
{
	public static bool Run()
	{
		int i = 0foo; //ERROR: Invalid integer //ERROR: Expected ';', got identifier //ERROR: Invalid expression
		return true;
	}
}
